[gd_scene load_steps=2 format=2]

[ext_resource path="res://Chapters/Chapter_1/Scenes/Elevator/Button.gd" type="Script" id=1]

[node name="Button" type="Area2D" groups=[
"highlight",
]]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="ButtonSprite" type="Sprite" parent="." groups=[
"highlight_soft",
]]

[node name="ShadowSprite" type="Sprite" parent="."]

[connection signal="input_event" from="." to="." method="_on_Button_input_event"]
